--- a/Brew_Heaven_Assignment_4/package.json
+++ b/Brew_Heaven_Assignment_4/package.json
@@ -1,37 +1,43 @@
 {
   "name": "brew-heaven-assignment-4",
   "private": true,
+  "description": "Coffee shop application built using Next.js and Tailwind CSS.",
+
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-}
-,
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
+    "@stripe/stripe-js": "^5.2.0",
+    "css-loader": "^7.1.2",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "latest",
+    "react-dom": "latest",
+    "react-icons": "^5.3.0",
+    "react-scroll": "^1.9.0",
+    "stripe": "^17.4.0",
+    "webpack": "^5.96.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "^15.0.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
     "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.1"
-  }
+    "typescript": "latest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
